fix(button): hover, disabled, alignment, docs
Includes component fixes after global CSS updates

Closes #1607, #1687, #1690, #1832, #1907, #1987, #2009

--- a/docs/app/css/style.css
+++ b/docs/app/css/style.css
@@ -556,7 +556,7 @@ md-content.demo-source-container > hljs > pre > code.highlight {
 }
 
 .dashed-bottom {
-  border-bottom: dashed 1px rgb(224, 224, 224);;
+  border-bottom: dashed 1px rgb(224, 224, 224);
   padding-bottom: 10px;
 }
 
