--- a/src/components/button/button-theme.scss
+++ b/src/components/button/button-theme.scss
@@ -1,17 +1,23 @@
 $button-border-radius: 3px !default;
 $button-fab-border-radius: 50% !default;
 
-md-toolbar .md-button.md-THEME_NAME-theme.md-fab {
-  background-color: white;
-}
-
 .md-button.md-THEME_NAME-theme {
   border-radius: $button-border-radius;
 
   &:not([disabled]) {
-    &:hover, 
     &:focus {
       background-color: '{{background-500-0.2}}';
+    }
+  }
+
+  &.md-fab {
+    border-radius: $button-fab-border-radius;
+    background-color: '{{accent-color}}';
+    color: '{{accent-contrast}}';
+    &:not([disabled]) {
+      &:focus {
+        background-color: '{{accent-A700}}';
+      }
     }
   }
 
@@ -22,22 +28,9 @@ md-toolbar .md-button.md-THEME_NAME-theme.md-fab {
       color: '{{primary-contrast}}';
       background-color: '{{primary-color}}';
       &:not([disabled]) {
-        &:hover, 
         &:focus {
           background-color: '{{primary-600}}';
         }
-      }
-    }
-  }
-
-  &.md-fab {
-    border-radius: $button-fab-border-radius;
-    background-color: '{{accent-color}}';
-    color: '{{accent-contrast}}';
-    &:not([disabled]) {
-      &:hover, 
-      &:focus {
-        background-color: '{{accent-A700}}';
       }
     }
   }
@@ -46,7 +39,6 @@ md-toolbar .md-button.md-THEME_NAME-theme.md-fab {
     color: '{{background-contrast}}';
     background-color: '{{background-50}}';
     &:not([disabled]) {
-      &:hover, 
       &:focus {
         background-color: '{{background-200}}';
       }
@@ -61,7 +53,6 @@ md-toolbar .md-button.md-THEME_NAME-theme.md-fab {
       color: '{{warn-contrast}}';
       background-color: '{{warn-color}}';
       &:not([disabled]) {
-        &:hover, 
         &:focus {
           background-color: '{{warn-700}}';
         }
@@ -77,7 +68,6 @@ md-toolbar .md-button.md-THEME_NAME-theme.md-fab {
       color: '{{accent-contrast}}';
       background-color: '{{accent-color}}';
       &:not([disabled]) {
-        &:hover, 
         &:focus {
           background-color: '{{accent-700}}';
         }
@@ -88,8 +78,14 @@ md-toolbar .md-button.md-THEME_NAME-theme.md-fab {
   &[disabled],
   &.md-raised[disabled],
   &.md-fab[disabled] {
-    color: '{{foreground-3}}';
-    background-color: transparent;
+    color: '{{foreground-2}}';
     cursor: not-allowed;
+  }
+  &.md-raised[disabled],
+  &.md-fab[disabled] {
+    background-color: '{{foreground-4}}';
+  }
+  &[disabled] {
+    background-color: 'transparent';
   }
 }
