--- a/src/components/dialog/dialog.scss
+++ b/src/components/dialog/dialog.scss
@@ -59,6 +59,7 @@ md-dialog {
 
     > * {
       margin-left: 8px;
+      margin-right: 0;
     }
   }
   &.md-content-overflow .md-actions {
